Fix overflow in quiz editor.

--- a/client/src/css/theme.css
+++ b/client/src/css/theme.css
@@ -26,7 +26,7 @@ textarea {
     margin: 0;
     background-color: #f8f8f8;
     border-radius: 0.5em;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .small {
